make folder for chatbot save if not exists

--- a/npc_content/npcs.toml
+++ b/npc_content/npcs.toml
@@ -1,4 +1,4 @@
-intro = "Welcome to Zarthuga, a DnD setting in development by Carl, accompanied by a interactive Discord bot. Thats me, hello. \nThe setting can be found at: https://www.npc_content.com/w/zarthuga-aecorn \nThere are chatGPT-powered bots in the NPC channels. Try /talk -ing to them :)"
+intro = "Welcome to Zarthuga, a DnD setting in development by Carl, accompanied by a interactive Discord bot. Thats me, hello. \nThe setting can be found at: https://www.npc_content.com/w/zarthuga-aecorn \nThere are chatGPT-powered bots in the NPC channels. Try talking to them :)"
 
 
 [Prinberg]
